tests/workflows/tests/snapshots/r#use__use_install_node_json_emits_one_install_and_pin_envelope.snap
---
source: tests/workflows/tests/use.rs
expression: envelope
---
{
  "success": true,
  "status": "installed",
  "runtime": "node",
  "version": "22.12.0",
  "pinned": {
    "node": "22.12.0"
  }
}
