tests/workflows/tests/snapshots/r#use__use_json_pin_reports_unavailable_runtime.snap
---
source: tests/workflows/tests/use.rs
expression: envelope
---
{
  "success": true,
  "pinned": {
    "node": "99.0.0"
  },
  "installed": false,
  "warning": "node@99.0.0 is not currently installed. Run `lpm use node@99.0.0` to install it"
}
